src/components/AnimationControls/AnimationControls.css
:root {
	--main-bg-one: #45274a;
	--main-bg-two: #fdb06a;
	--main-highlight-one: #e75a50;
	--main-highlight-two: #847a59;
	--main-bg-one-opacity: rgba(69, 39, 74, 0.95);
	--select-bg: var(--main-highlight-one);
	--select-border: #777;
	--select-focus: var(--main-highlight-two);
	--select-arrow: var(--select-border);
}

.editor__container {
	position: relative;
	display: flex;
	flex-direction: column-reverse;
	width: 100%;
	height: 100%;
	flex-grow: 1;
	color: var(--main-highlight-one);
	font-weight: 500;
	z-index: 1;
}

.editor__container input {
	background: none;
	border: none;
	border-radius: 0;
	letter-spacing: normal;
	padding: 4px 8px;
	color: var(--main-bg-one);
	background-color: var(--select-bg);
	outline: none;
	text-align: right;
}

.editor__container input:focus {
	outline: 1px solid var(--main-bg-two);
}

.editor__container button {
	appearance: button;
	outline: none;
	border: none;
	border-radius: 0;
	text-decoration: none;
	letter-spacing: normal;
	cursor: pointer;
	padding: 10px;
	font-size: 13px;
	font-weight: bolder;
	border: 1px solid var(--main-highlight-one);
	color: var(--main-highlight-one);
	background-color: transparent;
}

.editor__container label {
	display: block;
	font-size: 12px;
	margin: 0 0 4px 0;
	font-weight: normal;
	text-transform: uppercase;
}

.editor__container select:focus {
	border-radius: none;
}

.select__wrapper {
	position: absolute;
	display: flex;
	align-items: center;
	right: 0;
	text-align-last: right;
}

.select__wrapper::after {
	position: absolute;
	right: 8px;
	content: '';
	width: 0.8em;
	height: 0.5em;
	background-color: var(--main-bg-one);
	clip-path: polygon(100% 0%, 0 0%, 50% 100%);
	pointer-events: none;
}

.editor__controls {
	display: flex;
	flex-direction: row;
	flex-grow: 1;
	align-items: flex-end;
	width: 100%;
	background-color: var(--main-bg-one);
}

.editor__form {
	display: flex;
	justify-content: center;
	flex-direction: column;
	width: 100%;
	padding: 12px 30px 24px;
}

.editor__form--title label {
	margin: 0 0 8px;
	font-weight: 400;
	background-color: transparent;
	color: var(--main-highlight-one);
	padding: 0;
	text-align: left;
}

.editor__form--title input {
	margin-bottom: 4px;
	background: transparent;
	border: 1px solid var(--main-highlight-one);
	width: 100%;
	color: var(--main-highlight-one);
	text-align: left;
	font-size: 18px;
	text-indent: 8px;
  padding: 4px 0;
}

.editor__form--inner {
	display: flex;
	flex-direction: column;
	width: 100%;
}

.editor__form--inner label {
	position: relative;
	display: flex;
	flex-direction: row;
	align-items: center;
	background-color: var(--main-highlight-one);
	color: var(--main-bg-one);
	padding: 4px 8px;
}

.editor__form--inner .label__title {
	margin: 4px 0;
	font-weight: 600;
}

.editor__form--inner .input__num {
	position: absolute;
	right: 0;
	max-width: 100px;
	height: 100%;
}

.editor__form--target {
  grid-column: 1 / span 2;
}

.editor__form--select {
	appearance: none;
	direction: rtl;
	background-color: transparent;
	border: none;
	border-radius: 0;
	padding: 4px 24px 4px 0;
	margin: 0;
	width: 100%;
	font-family: inherit;
	font-size: inherit;
	cursor: inherit;
	line-height: inherit;
	outline: none;
	font-weight: 500;
	color: var(--main-bg-one);
	background-color: var(--select-bg);
	text-align-last: right;
}

.editor__form--select option {
	direction: rtl;
}

.editor__form--buttons {
	display: inline-grid;
	grid-template-columns: 1fr 1fr 1fr;
	grid-gap: 4px;
	width: 100%;
}

.editor__preview {
	position: relative;
	display: flex;
	flex-grow: 2;
	align-items: center;
	justify-content: center;
	width: 100%;
	/* this is require on #animation__target parent for 3d transforms to work */
	perspective: 500px;
}

.editor__preview button {
  padding: 10px 0;
  border: none;
}

.editor__preview--controls {
	position: absolute;
  display: inline-grid;
  grid-template-columns: 1fr 1fr;
  /* grid-gap: 8px; */
  grid-gap: 1px;
	top: 100%;
	right: 0;
	left: 0;
  /* margin: 0 30px; */
  margin-top: 1px;
}

.editor__preview--controls-one,
.editor__preview--controls-two {
	display: inline-grid;
	grid-template-columns: 1fr 1fr;
  /* grid-gap: 8px; */
  grid-gap: 1px;
}

.editor__preview--controls-one button,
.editor__preview--controls-two button {
  background-color: var(--main-bg-two);
  color: var(--main-bg-one);
}

.editor__keyframe--list {
	position: absolute;
	display: flex;
	flex-direction: column;
	flex-grow: 1;
	align-items: center;
	justify-content: center;
	top: 0;
	bottom: 0;
	right: 0;
	min-width: 320px;
	text-transform: uppercase;
	font-size: 12px;
	font-weight: bolder;
	background-color: var(--main-bg-one);
}

.editor__keyframe--list ul {
	margin: 30px 0;
	padding: 0 28px 0 30px;
	overflow: scroll;
}

.editor__keyframe--list li {
	position: relative;
	display: block;
	border: 1px solid var(--main-bg-two);
	list-style: none;
	width: 200px;
	height: auto;
	background-color: var(--main-bg-one);
	color: var(--main-bg-two);
	cursor: pointer;
	margin: 0;
	padding: 10px;
}

.editor__keyframe--list li + li {
	margin: 10px 0;
}

.editor__keyframe--list li.active,
.editor__keyframe--list li:hover {
	background-color: var(--main-bg-two);
	color: var(--main-bg-one);
}

.animation__target {
	position: absolute;
	display: flex;
	flex-direction: row;
	width: 6em;
	height: auto;
	-webkit-transform-style: preserve-3d;
	transform-style: preserve-3d;
	-webkit-transform: translate3d(0, 0, 0);
	transform: translate3d(0, 0, 0);
}

.animation__target svg {
	width: auto;
	height: auto;
}

@media (hover: hover) {
	button:hover {
		color: var(--main-bg-one);
		background-color: var(--main-highlight-one);
	}

	.editor__preview button:hover {
		background-color: var(--main-bg-one);
		color: var(--main-highlight-one);
		border: 1px solid var(--main-highlight-one);
	}
}

@media screen and (min-width: 360px) {
	.animation__target {
		width: 10em;
	}
}

@media screen and (min-width: 820px) {
	button {
		font-size: 15px;
	}

	.editor__container {
		flex-direction: row;
	}

	.editor__controls {
		align-items: center;
		width: 40%;
	}

	.editor__form {
		padding: 40px;
	} 

  .editor__form--title input {
    padding: 8px 0;
    font-size: 20px;
  }

	.editor__form--inner label {
		padding: 8px;
  }
  
	.editor__preview {
		width: 60%;
  }

	.editor__preview--controls {
		position: absolute;
		display: flex;
		justify-content: flex-end;
		top: 0;
		right: 0;
		left: unset;
    grid-template-columns: 1fr 1fr 1fr;
    grid-gap: 8px;
		width: 100%;
		margin: 0;
	}

	.editor__preview button {
    background-color: unset;
    border: 1px solid var(--main-bg-one);
    min-width: 80px;
    padding: 10px;
  }
  
  .editor__preview--controls-two {
    position: absolute;
    left: 0;
  }

	.editor__preview--controls-one,
	.editor__preview--controls-two {
    grid-gap: 8px;
		margin: 40px;
  }
  
	.editor__keyframe--list {
		top: 15%;
		bottom: 15%;
		right: 0;
	}

	.animation__target {
		width: unset;
		height: unset;
	}

	.animation__target svg {
		width: unset;
		height: unset;
	}
}

@media screen and (min-width: 1280px) {
	.editor__form--inner {
		display: inline-grid;
		grid-template-columns: 1fr 1fr;
		grid-gap: 0 4px;
	}
}

